--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,40 +1,20 @@
-name: Generate Pacman Contribution Graph
+name: Pacman Contributions
 
 on:
   schedule:
-    # Runs every day at 00:00 UTC
-    - cron: '0 0 * * *'
-  push:
-    branches:
-      - main
+    - cron: '0 0 * * *' # daily at midnight UTC
   workflow_dispatch:
 
 jobs:
   pacman:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Generate Pacman contributions
+        uses: pacmanscripts/github-pacman@v1
         with:
-          node-version: '18'
-
-      - name: Install PacMan GitHub Action
-        run: |
-          npm install -g github-pacman-graph-cli
-
-      - name: Generate Pacman Graph
-        run: |
-          mkdir -p output
-          pacman-graph --dark --output output/pacman-contribution-graph-dark.svg
-          pacman-graph --light --output output/pacman-contribution-graph.svg
-
-      - name: Commit and push SVG
-        run: |
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git add output/*.svg
-          git commit -m "Update Pacman contribution graph [skip ci]" || echo "No changes to commit"
-          git push
+          repo: ${{ github.repository }}
+          output: output
