--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -2,7 +2,7 @@ name: Pacman Contributions
 
 on:
   schedule:
-    - cron: '0 0 * * *' # daily at midnight UTC
+    - cron: '0 0 * * *' # runs daily at midnight UTC
   workflow_dispatch:
 
 jobs:
