--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -2,7 +2,7 @@ name: Pacman Contributions
 
 on:
   schedule:
-    - cron: '0 0 * * *' # runs daily at midnight UTC
+    - cron: '0 0 * * *'  # Runs daily at midnight UTC
   workflow_dispatch:
 
 jobs:
@@ -13,8 +13,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Generate Pacman contributions
-        uses: pacmanscripts/github-pacman@v1
+      - name: Generate Pacman contribution graph
+        uses: pacmanscripts/github-pacman-action@v1
         with:
           repo: ${{ github.repository }}
           output: output
